--- a/_src/css/sass/partials/generic/_fonts.scss
+++ b/_src/css/sass/partials/generic/_fonts.scss
@@ -1,25 +1,21 @@
 @font-face {
 	font-family: 'Graphik-Light';
-	src: url('../fonts/Graphik-Light.eot');
+	src: url('../fonts/Graphik-Light-Web.eot');
 	src: local("☺"),
-		url('../fonts/Graphik-Light.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Graphik-Light.woff2') format('woff2'),
-		url('../fonts/Graphik-Light.woff') format('woff'),
-		url('../fonts/Graphik-Light.ttf') format('truetype'),
-		url('../fonts/Graphik-Light.svg#Graphik-Light') format('svg');
+		url('../fonts/Graphik-Light-Web.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Graphik-Light-Web.woff2') format('woff2'),
+		url('../fonts/Graphik-Light-Web.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Graphik-Extralight';
-	src: url('../fonts/Graphik-Extralight.eot');
+	src: url('../fonts/Graphik-Extralight-Web.eot');
 	src: local("☺"),
-		url('../fonts/Graphik-Extralight.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Graphik-Extralight.woff2') format('woff2'),
-		url('../fonts/Graphik-Extralight.woff') format('woff'),
-		url('../fonts/Graphik-Extralight.ttf') format('truetype'),
-		url('../fonts/Graphik-Extralight.svg#Graphik-Extralight') format('svg');
+		url('../fonts/Graphik-Extralight-Web.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Graphik-Extralight-Web.woff2') format('woff2'),
+		url('../fonts/Graphik-Extralight-Web.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
